[package]
name = "secure_pipeline"
version = "0.1.0"
edition = "2021"
description = "ASCII packet transport with wire validation, collision-proof space escaping, and native rate limiting"
readme = "README.rst"
license = "GPL-3.0-only"
authors = ["David Harmon <vandebeers@icloud.com>"]
repository = "https://github.com/TheMapleseed/Syntax"
homepage = "https://github.com/TheMapleseed/Syntax"
documentation = "https://docs.rs/secure_pipeline"
keywords = ["encoding", "security", "base64", "validation", "ascii"]
categories = ["encoding", "parser-implementations"]
exclude = [".git/**"]

[lib]
name = "secure_pipeline"
path = "src/lib.rs"
